<resources>
    <string name="back">Back</string>
    <string name="app_name">MyCampus Moodle</string>
    <string name="LoginTitle">MyCampus Moodle</string>
    <string name="menu_settings">Settings</string>
    <string name="go">OK</string>
    <string name="cancel">Cancel</string>
    <string name="label_register">register</string>
    <string name="register_address">注册邮箱</string>
    <string name="register_name">Real Name</string>
    <string name="register_password">登陆密码</string>
    <string name="hint_address">you@domian.com</string>
    <string name="hint_name">Please enter your real name</string>
    <string name="hint_password">Please enter your login password.</string>
    <string name="submit_photo">Upload Avatar</string>
    <string name="hint_login_site">Please enter the Moodle url</string>
    <string name="hint_login_username">Please enter your account</string>
    <string name="hint_login_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="data_init_loadings">Data initialization…</string>
    <string name="check_network">Please checki the network and tap the screen try again</string>
    <string name="data_request_failure">Failed to get data</string>
    <string name="data_loading_progress">Loading…</string>
    <string name="no_data">No data.</string>
    <string name="myfileisnull">Private file cabinet is empty</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
	<string name="logging">Logining&#8230;</string>
	<string name="close">Close</string>
	<string name="uploadSuccess">Upload successful!</string>
	<string name="downloadcomplete">Download complete!</string>
	<string name="deleteRemoteFileSuc">Delete remote file successfully!</string>
	<string name="parentFold">Parent folder</string>
	<string name="uploadfail">Upload failed!</string>
	<string name="NoSDCard">No SD card!</string>
	<string name="openFile">Open file</string>
	<string name="delFile">Delete file</string>
	<string name="delRemoteFile">Delete Remote file</string>
	<string name="pauseDownload">Suspend Download</string>
	<string name="cancelDownload">Cancel Download</string>
	<string name="IncompleteAddress">Incomplete download address!</string>
	<string name="isnotWifi">You network is not WIFI,continue to download will generate fee!</string>
	<string name="continue1">Continue</string>
	<string name="networkinterrupted">Your network connection has been interrupted!</string>
	<string name="maxfilesize">Sorry, the file you uploaded is too large, please select a file that is less than %1$dM</string>
	<string name="nameuploadfile">Rename the uploaded file</string>
	<string name="filenamenotempty">File name can not be empty</string>
	<string name="deleteSuc">Delete successfully!</string>
	<string name="filenotexist">File does not exist or size is zero!</string>
	<string name="noappcanopenthis">There is no program can open this file.</string>
	<string name="Startdownloading">Start downloading</string>
	<string name="selectFilenotexist">The selected file does not exist</string>
	<string name="ifclearunread">Whether to remove all unread mark</string>
	<string name="details">details</string>
	<string name="clicktoviewpic">Click to view more</string>
	<string name="dataprocessing">Data processing&#8230;</string>
	<string name="savesuc">Saved successfully!</string>
	<string name="failed">Failed</string>
	<string name="save">Save</string>
	<string name="pleasefinishform">Please complete the questionnaire and submit</string>
	<string name="failedcopytosdcard">Failed to copy file to SD card</string>
	<string name="startdownloadbackground">Started to download in background..</string>
	<string name="openfullscreen">Open full screen</string>
	<string name="exitfullscreen">Exit full screen</string>
	<string name="refreshpersonalinfo">Refreshing personal information</string>
	<string name="moodleuser">Moodle User</string>
	<string name="thecountry">Country</string>
	<string name="thecity">City</string>
	<string name="theschool">School</string>
	<string name="thedepartment">Department</string>
	<string name="theclass">Class</string>
	<string name="theemail">Email</string>
	<string name="thestudy">Studying</string>
	<string name="theteach">Teaching</string>
	<string name="logintime">Logon Time</string>
	<string name="getcamerafailed">Failed to get the photo</string>
	<string name="changeavatar">Change Avatar</string>
	<string name="usertype">User Type</string>
	<string name="userinfo">User Information</string>
	<string name="isuploading">Uploading&#8230;</string>
	<string name="waitreturn">Upload completed, waiting for the result&#8230;</string>
	<string name="filenum">files:</string>
	<string name="nomessage">No message.</string>
	<string name="groupsend">Send</string>
	<string name="image">Image</string>
	<string name="send">Send</string>
	<string name="clearmessagehistory">If clear message logs of this chat?</string>
	<string name="messagehistoryclear">Message logs have been cleared</string>
	<string name="tryresend">Trying to resend..</string>
	<string name="selectlinkman">Select Contact</string>
	<string name="etcpeople">..%d etc.</string>
	<string name="people"> p</string>
	<string name="attachment">Attachments</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="confirmlogout">Are you sure you want to exit?</string>
    <string name="personal_account">个人账户</string>
    <string name="settings_option">设置选项</string>
    <string name="settings_alert">课前提醒</string>
    <string name="settings_dayalert">每日课程提醒</string>
    <string name="settings_alerttime">每日提醒时间</string>
    <string name="settings_cur_xueqi">当前学期</string>
    <string name="settings_initinfo">初始化数据</string>
    <string name="settings_schedule">上课时间表</string>
    <string name="settings_contract">软件授权协议</string>
    <string name="settings_changePwd">修改密码</string>
    <string name="settings_aboutus">关于我们</string>
    <string name="settings_userId">用户名</string>
    <string name="settings_newpwd">密码</string>
    <string name="settings_confirmnewpwd">确认密码</string>
    <string name="settings_newpwdtip">填写密码</string>
    <string name="settings_confirmnewpwdtip">再次填写确认</string>
    <string name="Commons.Ok">确定</string>
    <string name="Commons.SDCardErrorTitle">Can not access the SD card</string>
    <string name="Commons.SDCardErrorNoSDMsg">找不到SD卡</string>
    <string name="Commons.SDCardErrorSDUnavailable">SD卡不能使用</string>
    <string name="curriculum">课表</string>
     <string name="course">Course</string>
      <string name="my">My</string>
      <string name="mycourse">My courses</string>
    <string name="study">学习</string>
    <string name="message">Messaging</string>
    <string name="contacts">Contacts</string>
    <string name="member">成员</string>
    <string name="summary">总结</string>
    <string name="school">Home</string>
    <string name="roll_call">点名</string>
	<string name="album">相册</string>
    <string name="date_section1">昨天</string>
    <string name="date_section2">今天</string>
    <string name="date_section3">明天</string>
    <string name="en_yesterday">Yesterday</string>
    <string name="en_today">Today</string>
    <string name="en_tomorrow">Tomorrow</string>
    <string name="classroom_call">点名</string>
    <string name="classroom_course">课件</string>
    <string name="classroom_test">测验</string>
    <string name="classroom_summary">总结</string>
    <string name="call_attend">此次出勤率为</string>
    <string name="call_stu_attend">该生出勤率为</string>
    <string name="attend">出勤</string>
    <string name="late">迟到</string>
    <string name="leave">请假</string>
    <string name="absence">缺勤</string>
    <string name="call_title">系统默认状态为已出勤，请根据实际情况做相应操作。</string>
    <string name="call_save">保存数据</string>
    <string name="uploading">Upload</string>
    <string name="login_title">掌上魔灯</string>
    <string name="error_site_required">请输入魔灯平台地址</string>
    <string name="error_username_required">Please input your Moodle account</string>
    <string name="first_experience">Demo</string>
    <string name="summary_mark">本次授课综合评分为</string>
    <string name="summary_text">分</string>
    <string name="summary_discipline">授课纪律评价</string>
    <string name="summary_health">教室卫生评价</string>
    <string name="summary_content">授课内容</string>
    <string name="content_hint">请输入授课内容总结</string>
    <string name="album_hint">天气不错，心情也不错&#8230;</string>
    <string name="summary_homework">作业布置</string>
    <string name="homework_hint">请输入布置作业内容</string>
    <string name="summary_perfect">优</string>
    <string name="summary_good">良</string>
    <string name="summary_well">中</string>
    <string name="summary_bad">差</string>
    <string name="login_bottom">CopyRightⓒMYCAMPUS LLC.</string>
    <string name="login_left_bottom">How to set up MyCampus Moodle? </string>
    <string name="please_choose_user_type">Select user type</string>
    <string name="mycampusnotify">MyCampus Moodle Notification</string>
    <string name="notice_send">发送通知</string>
    <string name="notice_class_hint">请选择要发送通知的班级</string>
    <string name="notice_content_hint">请输入通知内容…</string>
    <string name="search_cancel">Cancel</string>
    <string name="search_choose_cls">搜索班级</string>
    <string name="search_choose_stu">搜索学生</string>
    <string name="search_choose_hint">Please enter the keywords</string>
    <string name="summary_attend">出勤汇总</string>
    <string name="summary_exam">测验汇总</string>
    <string name="summary_grade">成绩汇总</string>
    <string name="rank">评级</string>
    <string name="brought_course">所带课程</string>
    <string name="brought_class">所带班级</string>
    <string name="course_rating">课程评分</string>
    <string name="homework">课后作业</string>
    <string name="teacher_profile">教师简介</string>
    <string name="course_profile">课程简介</string>
    <string name="last_week">上周</string>
    <string name="this_week">本周</string>
    <string name="next_week">下周</string>
    <string name="page_mycourse">我的课表</string>
    <string name="page_myinfo">我的资料</string>
    <string name="page_myalbum">我的相册</string>
    <string name="page_questions">常见问题</string>
    <string name="page_recommend">推荐给好友</string>
    <string name="page_setting">系统设置</string>
    <string name="page_notice">班级通知</string>
    <string name="page_feedback">意见反馈</string>
    <string name="clear_cache">清除缓存</string>
    <string name="app_version">软件版本：</string>
     <string name="version_detection">版本检测</string>
    <string name="bottom_info">该生详细信息共3页  请滑动查看</string>
    <string name="stu_phone">学生电话：</string>
    <string name="stu_email">学生邮箱：</string>
    <string name="parent_name">家长姓名：</string>
    <string name="parent_phone">家长电话：</string>
    <string name="address">家庭住址：</string>
    <string name="stu_remark">该生备注：</string>
    <string name="feedback_send">提交意见</string>
    <string name="feedback_content_hint">请输入您的意见</string>
    <string name="feedback_title">\u3000\u3000如果您在使用中有什么问题或建议，欢迎告知我们，我们的技术人员会努力帮您解决。</string>
    <string name="delete">Delete</string>
    <string name="show">查看</string>
    <string name="pize">Photograph</string>
    <string name="location_picture">Local Album</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="call_phone">拨打电话</string>
    <string name="send_sms">发送短信</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="sendmsg">SendMessage</string>
       <string name="competencies">Competencies</string>
       <string name="participants">Participants</string>
       <string name="grades">Grades</string>
      <string name="notes">Notes</string>
</resources>