<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dip" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/moodle" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/LoginTitle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_huge"
            android:textStyle="italic"
            android:typeface="serif" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/table_item"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_marginTop="10.0dp"
                android:background="@drawable/round_corner_bg" >

                <ImageView
                    android:id="@+id/login_userphoto"
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8.0dp"
                    android:contentDescription="@null"
                    android:paddingBottom="2dip"
                    android:paddingTop="2dip"
                    android:src="@drawable/login_userphoto" />

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="10.0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_title_bar_btn"
                    android:gravity="left|center"
                    android:hint="@string/hint_login_username"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <ImageButton
                    android:id="@+id/login_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="1dip"
                    android:layout_marginTop="1dip"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:padding="5dip"
                    android:scaleType="centerInside"
                    android:src="@drawable/login_btn_bg_nor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10.0dp"
                android:background="@drawable/round_corner_bg" >

                <ImageView
                    android:id="@+id/login_passwordphoto"
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8.0dp"
                    android:contentDescription="@null"
                    android:paddingBottom="2dip"
                    android:paddingTop="2dip"
                    android:src="@drawable/login_password" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="10.0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left|center"
                    android:hint="@string/hint_login_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:padding="5dip" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dip"
                android:background="@drawable/bg_title_bar_btn"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_normal" />

            <Button
                android:id="@+id/btn_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dip"
                android:background="@drawable/bg_title_bar_btn"
                android:text="@string/first_experience"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_normal" />
        </RelativeLayout>

		<TextView
		    android:id="@+id/tv_howtouse"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/login_left_bottom"
		    android:textColor="#ffffff"
		    android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:gravity="bottom"
            android:text="@string/login_bottom"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_micro" />

    </LinearLayout>

</LinearLayout>