<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/bottom_tab_layout_height"
    android:layout_alignParentBottom="true"
    android:background="@color/transparent" >

    <com.dandian.pocketmoodle.widget.BottomTabLayout
        android:id="@+id/bottom_tab_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:background="@color/bottom_tab_bg_color"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <!-- 首页 -->
        <FrameLayout
            android:id="@+id/bottom_tab_home"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0" >

            <TextView
                style="@style/bottom_tab_tv"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:drawableTop="@drawable/botton_school_selector"
                android:text="@string/school"
                android:textSize="@dimen/text_size_xmicro" />
        </FrameLayout>
        
        <!-- 课程 -->

        <FrameLayout
            android:id="@+id/bottom_tab_school"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0" >

            <TextView
                style="@style/bottom_tab_tv"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:drawableTop="@drawable/bottom_course_selector"
                android:text="@string/my"
                android:textSize="@dimen/text_size_xmicro" />
        </FrameLayout>

        <!-- 消息 -->
        <FrameLayout
            android:id="@+id/bottom_tab_message"
            android:layout_width="0.0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0" >

            <TextView
                style="@style/bottom_tab_tv"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:drawableTop="@drawable/bottom_communication_selector"
                android:text="@string/message"
                android:textSize="@dimen/text_size_xmicro" />

            <TextView
                android:id="@+id/unreadCnt"
                android:layout_width="18dip"
                android:layout_height="18dip"
             	android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/round_num_bg"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_micro"
                android:textStyle="bold"
                android:visibility="invisible" />
        </FrameLayout>
		
        <!-- 沟通 -->

        <FrameLayout
            android:id="@+id/bottom_tab_communication"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0" >

            <TextView
                style="@style/bottom_tab_tv"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:drawableTop="@drawable/botton_contact_selector"
                android:text="@string/contacts"
                android:textSize="@dimen/text_size_xmicro" />
        </FrameLayout>

    </com.dandian.pocketmoodle.widget.BottomTabLayout>

</FrameLayout>