<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/setting_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_pic"
                    android:layout_width="80.0dip"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@null"
                    android:gravity="right" />

                <Button
                    android:id="@+id/bt_changeHeader"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:text="@string/changeavatar"
                    android:textSize="@dimen/text_size_micro"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
					android:text="@string/register_name"/>

                <TextView
                    android:id="@+id/user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSendMsg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0"
                android:text="@string/sendmsg" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" >

        </ListView>
        
        <Button
        android:id="@+id/page_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logout_button_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:background="@drawable/setting_exit_selector"
        android:text="@string/logout"
        android:textColor="@color/title_text_selector"
        android:textSize="@dimen/text_size_normal" />
        
    </LinearLayout>
    <!-- 数据加载中提示 -->

    <include layout="@layout/list_loading_with_text" />

    <!-- 数据加载失败提示 -->

    <include layout="@layout/empty_error" />

</LinearLayout>