<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tv_courseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="课程名称"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_course"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/empty_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/nav_button1"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/competencies"
                        android:gravity="center"
                        android:text="@string/competencies"
                        android:textSize="@dimen/text_size_small" />

                    <Button
                        android:id="@+id/nav_button2"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/participants"
                        android:drawablePadding="1dp"
                        android:gravity="center"
                        android:text="@string/participants"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/nav_button3"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/grades"
                        android:gravity="center"
                        android:text="@string/grades"
                        android:textSize="@dimen/text_size_small" />

                    <Button
                        android:id="@+id/nav_button4"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/notes"
                        android:gravity="center"
                        android:text="@string/notes"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="课程简介" />

</LinearLayout>